// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic style 1`] = `
"() => create(\\"div\\", {
  \\"className\\": \\"element_26b\\"
}, \\"Hello World\\");

CSS.put(\`
	/* 1 */
	.element_26b { color: green }
\`);"
`;

exports[`basic style 2`] = `
"() => <div className=\\"element_26b\\">Hello World</div>;

CSS.put(\`
	/* 1 */
	.element_26b { color: green }
\`);"
`;
